// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders 1`] = `
<div
  className="box justifyCenter xsDisplayFlex"
>
  <div
    className="box"
    style={
      Object {
        "maxWidth": 800,
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`validate data test id Container 1`] = `
<div
  className="box justifyCenter xsDisplayFlex"
  data-test-id="test"
>
  <div
    className="box"
    style={
      Object {
        "maxWidth": 800,
        "width": "100%",
      }
    }
  />
</div>
`;
